--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-
+/vendor/
+/web/core/
+/web/modules/contrib/
+/web/themes/contrib/
+/web/profiles/
+/web/sites/default/files/
+/web/sites/*/settings*.php
+/web/sites/*/services*.yml
+/web/sites/simpletest/
+/node_modules/
